@@ -78,11 +78,19 @@
             $menus[] = plxUtils::formatMenu(L_MENU_PROFIL, 'profil.php', L_MENU_PROFIL_TITLE);
             # récuperation des menus pour les plugins
             foreach($plxAdmin->plxPlugins->aPlugins as $plugName => $plugin) {
-						if(isset($plugin['activate']) AND $plugin['activate'] AND !empty($plugin['title'])) {
+				if(isset($plugin['activate']) AND $plugin['activate'] AND !empty($plugin['title'])) {
                     if(isset($plugin['instance']) AND is_file(PLX_PLUGINS.$plugName.'/admin.php')) {
                         if($plxAdmin->checkProfil($plugin['instance']->getAdminProfil(),false)) {
-                            $menus[] = plxUtils::formatMenu(plxUtils::strCheck($plugin['title']), 'plugin.php?p='.$plugName, plxUtils::strCheck($plugin['title']));
-												}
+                            if($plugin['instance']->adminMenu) {
+                                $menu = plxUtils::formatMenu(plxUtils::strCheck($plugin['instance']->adminMenu['title']), 'plugin.php?p='.$plugName, plxUtils::strCheck($plugin['instance']->adminMenu['caption']));
+								if($plugin['instance']->adminMenu['position'])
+									array_splice($menus, ($plugin['instance']->adminMenu['position']-1), 0, $menu);
+								else
+									$menus[]=$menu;
+                            }
+							else
+                                $menus[] = plxUtils::formatMenu(plxUtils::strCheck($plugin['title']), 'plugin.php?p='.$plugName, plxUtils::strCheck($plugin['title']));
+						}
                     }
                 }
             }
@@ -94,11 +102,11 @@
             <a title="PluXml" href="http://www.pluxml.org">Pluxml <?php echo $plxAdmin->aConf['version'] ?></a>
 	</li>
     </ul>
-	
+
 </div><!-- sidebar -->
 
 <div id="content">
-		
+
     <h1 id="sitename"><?php echo plxUtils::strCheck($plxAdmin->aConf['title']) ?></h1>
     <?php
 	if(is_file(PLX_ROOT.'install.php')) echo L_WARNING_INSTALLATION_FILE;
